# PySoundSense

./: README.md  SoundSense.ipynb  pyproject.toml
pysoundsense/: __init__.py  __main__.py  console.py  errors.py  gamelog.py  sounds.py  types_.py
pysoundsense/gui/: channelswidget.py  channelswidget.ui  channelswidget_ui.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  resources.qrc  resources_rc.py  utils.py
pysoundsense/ui/: channelswidget.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py
