[tool.poetry]
name = "pysoundsense"
version = "0.1.0"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tool.poetry.scripts]
pysoundsense = "pysoundsense.__main__:main"

[tool.poetry.dependencies]
python = "3.8"
loguru = "^0.5.0"
appdirs = "^1.4.4"
lxml = "^4.5.1"
beautifulsoup4 = "^4.9.1"
pyside2 = "^5.15.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"
jupyterlab = "^2.1.4"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
